[gd_scene load_steps=4 format=3 uid="uid://pjkkv5x1uj5b"]

[ext_resource type="Theme" uid="uid://dqjc75de0xc2f" path="res://ui/main.tres" id="1_4sfkc"]
[ext_resource type="Texture2D" uid="uid://c568lbwb4bppy" path="res://icon.svg" id="1_nmq56"]
[ext_resource type="Script" uid="uid://mlado5d136al" path="res://ui/lobby.gd" id="2_lyjxk"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4sfkc")
script = ExtResource("2_lyjxk")

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.706
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.320007
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="TextureRect" type="TextureRect" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture = ExtResource("1_nmq56")

[node name="TextureRect2" type="TextureRect" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture = ExtResource("1_nmq56")

[node name="TextureRect3" type="TextureRect" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture = ExtResource("1_nmq56")

[node name="TextureRect4" type="TextureRect" parent="ScrollContainer2/GridContainer"]
layout_mode = 2
texture = ExtResource("1_nmq56")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapSelectLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select Level"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="MapPreview" type="ItemList" parent="VBoxContainer/ScrollContainer/CenterContainer"]
layout_mode = 2
auto_width = true
auto_height = true
item_count = 3
max_columns = 6
same_column_width = true
icon_mode = 0
item_0/text = "Basic"
item_0/icon = ExtResource("1_nmq56")
item_1/text = "Castle"
item_1/icon = ExtResource("1_nmq56")
item_2/text = "Space"
item_2/icon = ExtResource("1_nmq56")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GameSettings" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MinimumPlayersLabel" type="Label" parent="VBoxContainer/VBoxContainer/GameSettings"]
layout_mode = 2
text = "Minimum players"

[node name="MinPlayerCount" type="SpinBox" parent="VBoxContainer/VBoxContainer/GameSettings"]
layout_mode = 2

[node name="MaximumPlayersLabel" type="Label" parent="VBoxContainer/VBoxContainer/GameSettings"]
layout_mode = 2
text = "Minimum players"

[node name="MaxPlayerCount" type="SpinBox" parent="VBoxContainer/VBoxContainer/GameSettings"]
layout_mode = 2

[node name="AddPlayerButton" type="Button" parent="VBoxContainer/VBoxContainer/GameSettings"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Player"

[node name="ConnectedPlayersContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LeaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Leave Lobby"

[node name="StartGameButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"
